# tree64

./: .gitignore  .gitmodules  Cargo.toml  build.rs  flake.nix
benches/: benchmarks.rs  my_benchmark.rs
examples/: .gates.py.swp  bench.py  breakdown.py  bridges.py  carc.py  castle.py  coloured_growth.py  convert_vox.rs  diag.py  diag_broken.py  dungeon.py  falling_3d.py  flowers.py  flowers3.py  gates.py  house.py  island.py  knots_3d.py  lightning.py  lightwall.py  matrix.py  maze.py  maze_and_test.py  mk2.py  mkjr_interpreter.py  paths.py  pipes.py  prl_test.py  read_xml.py  river.py  ropes.py  sand.py  sim.py  test.py  tetris.py  tetris_video.py  towers.py  town.py  util.py  wfc.py  (+3 more)
examples/patterns/: bench.py  bridges.py  coloured_growth.py  dungeon.py  flowers.py  flowers_3d.py  island_wip.py  l_pieces.py  matrix.py  maze.py  river.py  sand.py  sim.py  towers.py  town.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
markov/: __init__.py  interpreter.py  wfc.py  wip_compatibility.py
nix/: MarkovJunior-deps.nix  avoyd.nix  convert.py  magicavoxel.nix  requirements.txt
src/: arrays.rs  bespoke_regex.rs  lib.rs  main.rs  pattern_matching.rs  python.rs  util.rs  wfc.rs  write_vox.rs  write_zvox.rs
svo_dag/: Cargo.toml
svo_dag/src/: lib.rs
voxviewer/: .gitignore  Cargo.toml  compile_shaders.sh
voxviewer/assets/: render.wgsl  shader.wgsl
voxviewer/assets/shaders/: blit_srgb_ps.wgsl  raytrace.wgsl
voxviewer/src/: main.rs  phase_item.rs  pipeline.rs
voxviewer/src/shaders/: blit_srgb.slang  gradients.slang  inverse.slang  materials.slang  raytrace.slang
voxviewer/test_models/: missing_corner.dag  stairs_30.dag
wfc/: Cargo.toml
wfc/benches/: my_benchmark.rs
wfc/src/: lib.rs
