[package]
name = "tree64"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7.6"
bytemuck = { version = "1.21.0", features = ["derive"] }
fnv = "1.0.7"
glam = "0.29"
hashbrown = "0.15.2"

[workspace]
members = [".", "fuzz"]

[dev-dependencies]
criterion = "0.5.1"
dot_vox = "5.1.1"

[[bench]]
name = "benchmarks"
harness = false
