[package]
name = "tree64"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Voxel 64-tree implementation"
repository = "https://github.com/expenses/tree64"

[dependencies]
arrayvec = "0.7.6"
bytemuck = { version = "1.21.0", features = ["derive"] }
fnv = { version = "1.0.7", optional = true }
glam = "0.29"
hashbrown = { version = "0.15.2", optional = true }

[features]
caching = ["dep:fnv", "dep:hashbrown"]

[workspace]
members = [".", "fuzz"]

[dev-dependencies]
criterion = "0.5.1"
dot_vox = "5.1.1"

[[bench]]
name = "benchmarks"
harness = false
