[package]
name = "voxviewer"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.6"
log = "0.4.25"
pollster = "0.4.0"
wgpu = "23.0.1"
winit = "0.30"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen-futures = "0.4.50"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Response"] }
glam = { version = "0.28", features = ["bytemuck"] }
bytemuck = { version = "1.21.0", features = ["derive"] }
dolly = "0.6.0"
egui-wgpu = "0.30"
egui = { version = "0.30.0", features = ["default_fonts"] }
egui-winit = { version = "0.30.0", default-features = false }
ddsfile = "0.5.2"
rayon = "1.10.0"
svo_dag = { path = "../svo_dag" }
encase = { version = "0.9.0", features = ["glam"] }
