[package]
name = "wfc"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7.6"
fnv = "1.0.7"
hashbrown = "0.15.2"
num-traits = "0.2.19"
ordered-float = "4.6.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.10.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false
